# orthomap-view-angle-change

./: .gitignore  CMakeLists.txt  README.md  argparser.py  in_out_test.py  main.py  projection_tools.py  projections.py  rasters.py
_src/: algorithms.py  logger.py  main.py  projections.py  rasters.py  tiling.py
cmake/: version.h.in
mappov/: CMakeLists.txt  __main_app.cpp  main.cpp
mappov/config/: CMakeLists.txt  args.cpp  args.h  lcodes.cpp
mappov/data/: CMakeLists.txt  read.cpp  read.h  utils.cpp  utils.h  write.cpp  write.h
mappov/filesystem/: read.cpp  read.h
mappov/geometry/: CMakeLists.txt  transformations.cpp  transformations.h
mappov/memory/: CMakeLists.txt  memory.cpp  memory.h
omvac/: CMakeLists.txt  main.cpp
omvac/io/: CMakeLists.txt  read.cpp  read.h
omvac/memory/: memory.h
src/: algorithms.py  argparser.py  legend.py  projections.py  rasters.py
test_data/: dsm.tif  lcmap.tif
